# mlflow-setup

./: .client.env  .dockerignore  .env.example  .gitignore  .server.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  renovate.json  startup.sh
.github/workflows/: test.yml
config/: add-user.sh  update-user.sh
env-examples/: .client.env  .new-user.env  .server.env  .user.env
minio/: add-user.sh  setup.sh  update-user.sh
mlflow/: adduser.py  updateuser.py
mlflow/server/auth/: basic_auth_template.ini  replace-env-vars.sh
tests/: env.py  test_user_permissions.py
