[tool.poetry]
name = "mlflow-server"
version = "0.1.0"
description = "A server for managing MLflow experiments and models."
authors = ["Mattia Matteini <mattia.matteini@unibo.it>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">= 3.10.0 < 3.15.0"
mlflow = "^3.5.0"
boto3 = "^1.40.75"
psycopg2-binary = "^2.9.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
